--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1"
   },
   "devDependencies": {
+    "chai": "^5.1.0",
     "dotenv": "^16.4.5",
+    "mocha": "^10.3.0",
     "nodemon": "^3.1.0"
   }
 }
