--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "devStart": "nodemon server.js",
-    "test": "mocha"
+    "test": "mocha --timeout 5000"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.2"
   },
   "devDependencies": {
     "chai": "^5.1.0",
