--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "devStart": "nodemon server.js",
-    "test": "mocha --timeout 5000"
+    "test": "cross-env NODE_ENV=test mocha --timeout 5000"
   },
   "author": "",
   "license": "ISC",
