NEW: MapController and test added. Test passed

--- a/backend/.env.test
+++ b/backend/.env.test
@@ -1,3 +1,4 @@
 DB_CONNECTION=mongodb+srv://vuseaman:iIVC9puAOXjEiKRp@challenge6login.v49poym.mongodb.net/tests?retryWrites=true&w=majority&appName=Challenge6Login
 PORT=4003
 WEATHER_API_KEY=82eead94890f3e9d0203a62caa188ff4
+TOMTOM_API_KEY=lNk6NA97M7pAWFlpCeZQ2klCKTR2nNOn
